--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -28,46 +28,38 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import statsmodels.api as sm\n",
-        "import statsmodels.formula.api as smf\n",
-        "from sklearn import metrics\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_squared_error\n",
-        "\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "dataset = pd.read_excel(\"/content/master-thesis/PredictorData2020.xlsx\", sheet_name =\"FirstSet\")\n",
-        "\n",
-        "def process():\n",
-        "  dataset['ERP_(t-1)'] = dataset['ERP'].shift(1)\n",
-        "  dataset['ERP_(t+1)'] = dataset['ERP'].shift(-1)\n",
-        "  #type: numpy array\n",
-        "  ERP = dataset.iloc[960:1800,45]\n",
-        "  X = dataset.iloc[960:1800,12:45]\n",
-        "  ALL = dataset.iloc[960:1800,11:45]\n",
-        "\n",
-        "  ERP = np.nan_to_num(ERP)\n",
-        "  X = np.nan_to_num(X)\n",
-        "  ALL = np.nan_to_num(ALL)\n",
-        "\n",
-        "  #Devide the dataset into train and test subsets\n",
-        "  X_train, X_test, y_train, y_test = train_test_split(X, ERP, test_size=0.20, random_state=42)\n",
-        "  X_train = np.nan_to_num(X_train)\n",
-        "  y_train = np.nan_to_num(y_train)\n",
-        "  X_test = np.nan_to_num(X_test)\n",
-        "  y_test = np.nan_to_num(y_test)\n",
-        "\n",
-        "  #type: pandas dataframe\n",
-        "  X_test_df = pd.DataFrame(X_test, columns = dataset.columns[12:45])\n",
-        "  return X_train, X_test, y_train, y_test, X_test_df\n"
+        "#**FUNKSJONER SOM BRUKES AV ALLE MODELLER**"
       ],
       "metadata": {
-        "id": "zqt8ska-bMRn"
+        "id": "O2weEFEi9Dwm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def process():\n",
+        "  dataset = pd.read_excel(\"/content/master-thesis/PredictorData2020.xlsx\", sheet_name =\"FirstSet\")\n",
+        "  dataset['ERP_(t-1)'] = dataset['ERP'].shift(1)\n",
+        "  dataset['ERP_(t+1)'] = dataset['ERP'].shift(-1)\n",
+        "  #from 900:1790 are the dates 194601 to 202002\n",
+        "  dataset = dataset.iloc[900:1790].reset_index(drop=True).drop(['yyyymm'], axis=1)\n",
+        "  return dataset\n",
+        "\n",
+        "def update_predictors(dataset):\n",
+        "  data = dataset\n",
+        "  for column in data:\n",
+        "    if data[column].count()<60:\n",
+        "      data = data.drop([column], axis=1)\n",
+        "    else:\n",
+        "      data[column]=data[column].interpolate(method='linear', limit_direction='backward')\n",
+        "  return data"
+      ],
+      "metadata": {
+        "id": "5y17zrySBVbb"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     }
   ]
