--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -44,11 +44,11 @@
         "  dataset['ERP_(t-1)'] = dataset['ERP'].shift(1)\n",
         "  dataset['ERP_(t+1)'] = dataset['ERP'].shift(-1)\n",
         "  #from 900:1790 are the dates 194601 to 202002\n",
-        "  dataset = dataset.iloc[900:1790].reset_index(drop=True).drop(['yyyymm'], axis=1)\n",
+        "  dataset = dataset.iloc[900:1790]\n",
         "  return dataset\n",
         "\n",
         "def update_predictors(dataset):\n",
-        "  data = dataset\n",
+        "  data = dataset.reset_index(drop=True).drop(['yyyymm'], axis=1)\n",
         "  for column in data:\n",
         "    if data[column].count()<60:\n",
         "      data = data.drop([column], axis=1)\n",
